--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
+#---------------------------------------------LEGIT----------------------------------------------------------
+
+#spring.datasource.name=jdbc/instranate_local
+#
+#spring.datasource.url=jdbc:mysql://db-resonance-dev.c5ltdvbpaefj.us-east-1.rds.amazonaws.com:3306/instranate_local
+#spring.datasource.username=tchandak
+#spring.datasource.password=BlackBelt
+#
+## Keep the connection alive if idle for a long time (needed in production)
+#spring.datasource.testWhileIdle = true
+#spring.datasource.validationQuery = SELECT 1
+#
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql = true
+
+#---------------------------------------------TESTING----------------------------------------------------------
+
 spring.datasource.name=jdbc/instranate_local
 
-spring.datasource.url=jdbc:mysql://db-resonance-dev.c5ltdvbpaefj.us-east-1.rds.amazonaws.com:3306/instranate_local
-spring.datasource.username=tchandak
-spring.datasource.password=BlackBelt
+spring.datasource.url=jdbc:mysql://localhost:3306/instranate_local
+spring.datasource.username=instranate-userr
+spring.datasource.password=instranate-password#1
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -11,6 +29,23 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 # Show or not log for each sql query
 
